feat(reservation): modify reservation
